# laba2

./: config.txt
_reference/Game-Engine-2-main/: CMakeLists.txt  config.txt  imgui.ini
_reference/Game-Engine-2-main/src/: CMakeLists.txt  main.cpp
_reference/Game-Engine-2-main/src/Ecs/Components/: BaseComponentStorage.h  ComponentStorage.hpp
_reference/Game-Engine-2-main/src/Ecs/Entity/: EntityId.cpp
_reference/Game-Engine-2-main/src/Ecs/Filter/: Filter.cpp  Filter.h  FilterBuilder.cpp  FilterBuilder.h
_reference/Game-Engine-2-main/src/Ecs/Systems/: IInitializer.h  ISystem.h  SystemsManager.cpp
_reference/Game-Engine-2-main/src/Ecs/World/: World.cpp  World.h
_reference/Game-Engine-2-main/src/Sample/Components/: AsteroidComponent.h  AsteroidSpawnSettingsComponent.h  BoxColliderComponent.h  BulletComponent.h  CircleColliderComponent.h  CircleShapeComponent.h  CollisionComponent.h  CooldownBoostComponent.h  CooldownBoostEvent.h  GameOverEvent.h  GameStateComponent.h  MovementComponent.h  PauseStateComponent.h  PlayerComponent.h  PositionComponent.h  RectangleShapeComponent.h  ShootInputEvent.h  ShooterComponent.h
_reference/Game-Engine-2-main/src/Sample/Systems/: AsteroidSpawnSystem.cpp  AsteroidSpawnSystem.h  CollisionDetectionSystem.cpp  CollisionDetectionSystem.h  CollisionHandlerSystem.cpp  CooldownBoostSystem.h  GameOverSystem.cpp  GameOverSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  OutOfScreenCleanupSystem.h  PauseSystem.cpp  PauseSystem.h  RenderSystem.cpp  RenderSystem.h  RestartSystem.cpp  ScoringSystem.h  ShootSystem.cpp  ShootSystem.h  UfoSpawnSystem.h
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Config/: Config.cpp  Config.h
src/Ecs/Components/: ComponentStorage.hpp
src/Ecs/Entity/: EntityId.cpp  EntityId.h
src/Ecs/Filter/: Filter.cpp  Filter.h  FilterBuilder.cpp  FilterBuilder.h
src/Ecs/Systems/: IInitializer.h  ISystem.h  SystemsManager.cpp  SystemsManager.h
src/Ecs/World/: World.cpp  World.h
src/GUI/: GUI.cpp  GUI.h
src/Sample/Components/: AddScoreEvent.h  AsteroidComponent.h  AsteroidSpawnRequestEvent.h  AsteroidSpawnSettingsComponent.h  BoxColliderComponent.h  BulletComponent.h  CircleColliderComponent.h  CircleShapeComponent.h  CollisionComponent.h  GameOverEvent.h  GuiToggleEvent.h  MovementComponent.h  PauseToggleEvent.h  PlayerComponent.h  RectangleShapeComponent.h  RestartInputEvent.h  ScoreIncreaseEvent.h  ShootInputEvent.h  ShooterComponent.h  SpawnAsteroidEvent.h  TransformComponent.h  UfoComponent.h  UfoSpawnRequestEvent.h  UfoSpawnSettingsComponent.h
src/Sample/Config/: game.cfg
src/Sample/Services/: ConfigService.h  GameConfig.h  InputService.h  RandomService.h  RenderService.h  TimeService.h
src/Sample/Systems/: AsteroidSpawnSystem.cpp  AsteroidSpawnSystem.h  BoundsCleanupSystem.cpp  BoundsCleanupSystem.h  CollisionDetectionSystem.cpp  CollisionDetectionSystem.h  CollisionHandlerSystem.h  CollisionResolveSystem.cpp  CollisionResolveSystem.h  CooldownBoostSystem.cpp  GameOverSystem.cpp  GameOverSystem.h  InitSystem.cpp  InitSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  OutOfScreenCleanupSystem.cpp  RenderSystem.cpp  RenderSystem.h  RestartSystem.h  ScoreSystem.cpp  ScoreSystem.h  ScoringSystem.cpp  ShootSystem.cpp  ShootSystem.h  UISystem.cpp  UISystem.h  UfoSpawnSystem.cpp
